// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary with multiple expenses. 1`] = `
<div>
  <h1>
    Viewing 
    50
     
    expenses
     totalling 
    $1,234,543.21
  </h1>
</div>
`;

exports[`Should render ExpensesSummary with one expense. 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.55
  </h1>
</div>
`;
